--- a/app/src/main/res/layout/activity_nova.xml
+++ b/app/src/main/res/layout/activity_nova.xml
@@ -15,24 +15,26 @@
     <TextView
         android:id="@+id/Texto"
         android:text="Nova Atividade"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/txtTitulo"
+        android:id="@+id/titulo"
         android:text="Titulo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:id="@+id/txtTitulo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btnSalvador"
         android:text="VAI SE FUUUU"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="salvarClick"/>
 
 
 </LinearLayout>
